# MeshCore-SAME-EAS-Alerter

./: Cargo.toml  README.md  meshcore-same-eas-alerter.service  meshcore-same-eas-alerter.sh  rtl-sdr_meshcore_installer.sh
etc/ci/: before_deploy.sh
src/: main.rs  sameCodes.csv
