[package]
name = "MeshCore-SAME-EAS-Alerter"
version = "0.1.0"
edition = "2021"
authors = ["Mambo_430 <meshcore.establish625@passmail.net>"]
description = "The MeshCore SAME EAS Alerter is a tool that listens for SAME EAS alerts using a SDR and sends them over the MeshCore network."
license = "GPL"

[package.metadata.deb]
maintainer = "Mambo_430 <meshcore.establish625@passmail.net>"
copyright = "2025, Mambo_430"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
depends = "$auto"

[dependencies]
sameold = "0.5.0"
chrono = "0.4.38"
byteorder = "1.5.0"
anyhow = "1.0.86"
tokio = { version = "1.0.0", features = ["full"] }
meshcore_companion = { git = "https://github.com/Duncaen/meshcore-rs" }
log = "0.4.21"
thiserror = "1.0.61"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
ascii = "1.1.0"
clap = { version = "4.5.5", features = ["derive"] }
atty = "0.2.14"
rust-embed = "8.4.0"
serde = { version = "1.0.203", features = ["derive"] }
csv = "1.3.0"
simple_logger = "5.0.0"
tokio-process = "0.1"
